--- a/adancedCSS/Nexter/starter/sass/_homes.scss
+++ b/adancedCSS/Nexter/starter/sass/_homes.scss
@@ -1,4 +1,80 @@
 .homes {
-  background-color: $color-secondary;
   grid-column: center-start / center-end;
+  margin: 15 0;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-gap: 7rem;
+}
+
+.home {
+  background-color: $color-grey-light-1;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-row-gap: 3.5rem;
+
+  &__img {
+    width: 100%;
+    grid-row: 1/2;
+    grid-column: 1/-1;
+    z-index: 1;
+  }
+
+  &__like {
+    grid-row: 1/2;
+    grid-column: 2/3;
+    justify-self: end;
+
+    fill: $color-primary;
+    width: 2.5rem;
+    height: 2.5rem;
+    z-index: 2;
+    margin: 1rem;
+  }
+
+  &__name {
+    grid-row: 1/2;
+    grid-column: 1/-1;
+    justify-self: center;
+    align-self: end;
+
+    z-index: 3;
+
+    font-family: $font-display;
+    font-weight: 400;
+    font-size: 1.6rem;
+    text-align: center;
+    padding: 1.25rem;
+    background-color: $color-secondary;
+    color: #fff;
+
+    width: 80%;
+    transform: translateY(50%);
+  }
+
+  &__location,
+  &__rooms {
+    margin-top: 2.5rem;
+  }
+
+  &__location,
+  &__rooms,
+  &__area,
+  &__price {
+    display: flex;
+    align-items: center;
+
+    font-size: 1.5rem;
+    margin-left: 2rem;
+    svg {
+      fill: $color-primary;
+      width: 2rem;
+      height: 2rem;
+      margin-right: 1rem;
+    }
+  }
+
+  &__btn {
+    grid-column: 1/-1;
+  }
 }
