--- a/adancedCSS/Nexter/starter/css/style.css
+++ b/adancedCSS/Nexter/starter/css/style.css
@@ -74,7 +74,27 @@ body {
 .sidebar {
   background-color: #c69963;
   grid-column: sidebar-start / sidebar-end;
-  grid-row: 1/-1; }
+  grid-row: 1/-1;
+  display: flex;
+  justify-content: center; }
+
+.nav-btn {
+  border: none;
+  border-radius: 0;
+  background-color: #fff;
+  height: 2px;
+  width: 4.5rem;
+  margin-top: 4rem; }
+  .nav-btn::before, .nav-btn::after {
+    background-color: #fff;
+    height: 2px;
+    width: 4.5rem;
+    content: '';
+    display: block; }
+  .nav-btn::before {
+    transform: translateY(-1.5rem); }
+  .nav-btn::after {
+    transform: translateY(1.3rem); }
 
 .header {
   background-color: #54483a;
@@ -211,11 +231,11 @@ body {
     grid-row: 1 / span 3;
     grid-column: 3 / span 3; }
   .gallery__item--3 {
-    grid-row: 1 / span 2;
-    grid-column: 6; }
+    grid-row: 1 / 3;
+    grid-column: 6 / 7; }
   .gallery__item--4 {
     grid-row: 1 / span 2;
-    grid-column: 7 / span 2; }
+    grid-column: 7 / -1; }
   .gallery__item--5 {
     grid-row: 3 / span 3;
     grid-column: 1 / span 2; }
@@ -227,7 +247,7 @@ body {
     grid-column: 5; }
   .gallery__item--8 {
     grid-row: 3 / span 2;
-    grid-column: 6 / span 2; }
+    grid-column: 6 / 8; }
   .gallery__item--9 {
     grid-row: 3 / span 3;
     grid-column: 8; }
@@ -236,7 +256,7 @@ body {
     grid-column: 1; }
   .gallery__item--11 {
     grid-row: 6 / span 2;
-    grid-column: 2 / span 2; }
+    grid-column: 2 / 4; }
   .gallery__item--12 {
     grid-row: 6 / span 2;
     grid-column: 4; }
@@ -254,4 +274,35 @@ body {
 
 .footer {
   background-color: #101d2c;
-  grid-column: full-start / full-end; }
+  grid-column: full-start / full-end;
+  padding: 8rem; }
+
+.nav {
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  grid-gap: 2rem;
+  align-items: center; }
+  .nav__link:link, .nav__link:visited {
+    text-decoration: none;
+    font-size: 1.4rem;
+    color: #fff;
+    font-family: "Josefin Sans", sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    padding: 1.5rem;
+    background-color: rgba(255, 255, 255, 0.05);
+    display: block;
+    transition: transform 0.2s; }
+  .nav__link:hover, .nav__link:active {
+    background-color: rgba(255, 255, 255, 0.05);
+    transform: translateY(-3px); }
+
+.copyright {
+  font-size: 1.4rem;
+  color: #aaa;
+  margin-top: 6rem;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%; }
