--- a/adancedCSS/Nexter/starter/sass/_gallery.scss
+++ b/adancedCSS/Nexter/starter/sass/_gallery.scss
@@ -17,12 +17,12 @@
       grid-column: 3 / span 3;
     }
     &--3 {
-      grid-row: 1 / span 2;
-      grid-column: 6;
+      grid-row: 1 / 3;
+      grid-column: 6 / 7;
     }
     &--4 {
       grid-row: 1 / span 2;
-      grid-column: 7 / span 2;
+      grid-column: 7 / -1;
     }
     &--5 {
       grid-row: 3 / span 3;
@@ -38,7 +38,7 @@
     }
     &--8 {
       grid-row: 3 / span 2;
-      grid-column: 6 / span 2;
+      grid-column: 6 / 8;
     }
     &--9 {
       grid-row: 3 / span 3;
@@ -50,7 +50,7 @@
     }
     &--11 {
       grid-row: 6 / span 2;
-      grid-column: 2 / span 2;
+      grid-column: 2 / 4;
     }
     &--12 {
       grid-row: 6 / span 2;
